2010-01-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Ignore port message with port=0.
	* src/BtPortMessage.cc

2010-01-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Run autoupdate
	* configure.ac

2010-01-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated autoconf/automake auxiliary files.
	* INSTALL
	* config.guess
	* config.sub
	* depcomp
	* install-sh
	* m4/intldir.m4
	* missing
	* mkinstalldirs

2010-01-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed unused function.
	* src/SharedHandle.h

2010-01-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Find pooled socket using all cached addresses.
	* src/DNSCache.h
	* src/DownloadEngine.cc
	* src/DownloadEngine.h
	* src/InitiateConnectionCommand.cc

2010-01-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated copyright year.
	* src/version_usage.cc

2010-01-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Pool connection if _contentEncodingDecoder is used and server
	supports persistent connection.
	* src/HttpDownloadCommand.cc

2010-01-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc.
	* src/DownloadCommand.cc

2010-01-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Untabify. Fixed one line in copyright which is longer than 80
	columns.
	* src
	* test

2009-12-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Release 1.8.0

2009-12-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated po templates.
	* po/aria2.pot

2009-12-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented --bt-save-metadata option in man page.
	* doc/aria2c.1.txt

2009-12-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed usage of --bt-save-metadata option.
	* src/usage_text.h

2009-12-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated po templates.
	* po/aria2.pot
