@@ -1,3 +1,12 @@
+2010-01-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Fixed the bug that causes segmentation fault if unknown option is
+	put in aria2.conf file. BUG#2928303
+	* src/OptionParser.cc
+	* src/OptionParser.h
+	* src/option_processing.cc
+	* test/OptionParserTest.cc
+
 2010-01-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Ignore port message with port=0.
